<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_settings"
    app:startDestination="@id/generalSettingsFragment">

    <fragment
        android:id="@+id/folderSelectFragment"
        android:name="com.android.photoslide.ui.folders.FolderSelectFragment"
        android:label="@string/nav_folders" />

    <fragment
        android:id="@+id/layoutSelectFragment"
        android:name="com.android.photoslide.ui.layout.LayoutSelectFragment"
        android:label="@string/nav_layout" />

    <fragment
        android:id="@+id/generalSettingsFragment"
        android:name="com.android.photoslide.ui.settings.GeneralSettingsFragment"
        android:label="@string/nav_settings_title" />

</navigation>
